--- a/Frontend/ad_ccess/src/assets/css/styleRegistrarUsuario.css
+++ b/Frontend/ad_ccess/src/assets/css/styleRegistrarUsuario.css
@@ -9,15 +9,33 @@ body{
 }
 
 
-.layout-content-custom {
+/* .layout-content-custom {
   display: flex;
   height: 100%;
   flex: 1;
-  /* flex-direction: column; */
+  /* flex-direction: column; 
   justify-content: center;
  padding: 2rem;
  
  
+} */
+
+/* Este es el contenedor que envuelve a <Sidebar /> y al <main> */
+.page-container {
+    display: flex;
+    min-height: 100vh;
+    background-color: #101a23;
+}
+
+/* El contenido principal debe "respetar" el ancho del sidebar fixed */
+.layout-content-custom {
+    flex: 1;
+    margin-left: 260px; /* EL ANCHO DE TU SIDEBAR */
+    padding: 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centra el contenido horizontalmente pero respetando el margen */
+    min-width: 0; /* Evita que el flex se desborde */
 }
 
 
@@ -30,13 +48,21 @@ body{
 } */
 
 /* Ajustamos el contenedor para que no sea tan restrictivo */
-.content-container {
+/* .content-container {
   display: flex;
   flex-direction: column;
   width: 100%;
-  /* 1000px es aproximadamente 2/3 de una pantalla estándar */
+  /* 1000px es aproximadamente 2/3 de una pantalla estándar 
   min-width: 850px; 
-  margin: 0 auto; /* Asegura el centrado */
+  margin: 0 auto; /* Asegura el centrado
+} */
+
+.content-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 1000px; /* Máximo ancho deseado */
+    margin: 0 auto; /* Centra el form dentro del espacio disponible */
 }
 
 /* Hacemos que los campos sean un poco más altos para que se sientan "grandes" */
@@ -229,4 +255,58 @@ border-radius: 10px;
 /* Efecto al pasar el mouse */
 .custom-file-upload:hover {
     background-color: #87ceeb;
+}
+
+.input{
+  background-color: transparent;
+  border:1px solid #2D3748 ;
+  border-radius: 10px;
+  padding: 5px;
+  width:100%;
+  color:white;
+  margin-top: 5px;
+
+}
+
+.cargador-contenido{
+  /* display: flex;
+  justify-content: center;
+  border: 1px solid white;
+  padding: 15px; */
+  border: 2px dashed #34495e;
+    border-radius: 1rem;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: all 0.3s;
+    overflow: hidden;
+    background: #0b1118;
+
+}
+
+.dropzone {
+    border: 2px dashed #34495e;
+    border-radius: 1rem;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: all 0.3s;
+    overflow: hidden;
+    background: #0b1118;
+}
+.dropzone-content {
+    text-align: center;
+    color: #afaaaa;
+}
+
+.dropzone-content i { font-size: 3rem; margin-bottom: 0.5rem; display: block; }
+
+.img-preview {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
